end of day -- gg

--- a/thesis/Intro/acknowledgement.tex
+++ b/thesis/Intro/acknowledgement.tex
@@ -6,11 +6,13 @@
 	\item Christiaan Baaij - making \clash{} and answering questions
 	\item Ruud van Damme
 	\item Jan Broenink
+	\item Rinse Wester - giving input on Avalon bridges
 \end{itemizens}
 
 \end{acknowledgements}
 
 
+\vfill
 
 \begin{acronyms}
 \begin{tabular}{>{\bfseries}l l}
@@ -26,6 +28,11 @@
 	HDL & Hardware Description Language \\
 	SoC & System-on-Chip \\ 
 	ODE & Ordinary Differential Equation \\
+	HPS & Hard Processor System \\
+	ARM & Advanced RISC Machine (CPU development company) \\
+	RISC & Reduced Instruction Set Computer \\
+	IP & Intellectual Property \\
+	
 \end{tabular}		
 \end{acronyms}    
 
