--- a/thesis/References/references.bib
+++ b/thesis/References/references.bib
@@ -45,6 +45,40 @@
  pages={38},
  year={2015},
 }
+@misc{HaskellChart,
+	title = {Chart: A library for generating 2D Charts and Plots},
+	howpublished = "\url{https://hackage.haskell.org/package/Chart}",
+	year = {2014}, 
+	note = "[Accessed: June 2015]"
+}
+@BOOK{BaaijMSc,
+	author = {Baaij, Christiaan},
+	title = {CλasH: From Haskell To Hardware},
+	url = {http://essay.utwente.nl/59482/},
+	pages={101},
+	year = {2009}
+}
+@BOOK{BaaijPhD,
+ author={Baaij, Christiaan},
+ title={Digital Circuits in CλaSH: Functional  Speciications  and  Type-Directed  Synthesis},
+ url = {http://doc.utwente.nl/93962/},
+ pages={228},
+ year={2015},
+}
+@misc{CLaSHTut,
+	title = {clash-prelude-0.8.1 - CLaSH.Tutorial},
+	howpublished = "\url{http://hackage.haskell.org/package/clash-prelude-0.8.1/docs/CLaSH-Tutorial.html}",
+	year = {2015}, 
+	note = "[Accessed: June 2015]"
+}
+@misc{CLaSHBlogTut,
+ 	author={Baaij, Christiaan},
+	title = {CλaSH FPGA Starter},
+	howpublished = "\url{http://christiaanb.github.io/posts/clash-fpga-starter/}",
+	year = {2015}, 
+	note = "[Accessed: June 2015]"
+}
+
 
 % ------------------------------------------------------------------------
 % SAMPLE BIBLIOGRAPHY FILE
