--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -142,9 +142,10 @@
 \mainmatter
 
 \include{P1-Introduction/introduction}
-\include{P2-Results/results}
-\include{P3-Conclusion/conclusion}
-\include{P4-Discussion/discussion}
+\include{P2-Main/methods}
+\include{P2-Main/results}
+\include{P3-Final/conclusion}
+\include{P3-Final/discussion}
 
 
 % ********************************** Back Matter *******************************
@@ -181,6 +182,7 @@
 \include{Appendix/toolchain_integration}
 \include{Appendix/toolchain_deployment}
 \include{Appendix/data_io}
+\include{Appendix/data_io_setup}
 
 \end{appendices}
 
