almost at the conclusion!

--- a/thesis/Intro/acknowledgement.tex
+++ b/thesis/Intro/acknowledgement.tex
@@ -32,7 +32,7 @@
 	ARM & Advanced RISC Machine (CPU development company) \\
 	RISC & Reduced Instruction Set Computer \\
 	IP & Intellectual Property \\
-	
+	GUI & Graphical User Interface \\
 \end{tabular}		
 \end{acronyms}    
 
