--- a/thesis/P2-Main/results.tex
+++ b/thesis/P2-Main/results.tex
@@ -1,18 +1,13 @@
-%*******************************************************************************
-%****************************** Second Chapter *********************************
-%*******************************************************************************
-
 \chapter{Results}
-
+\label{s:results}
+After 
 \section{Euler}
-
-\subsection{Performance}
 \subsection{Accuracy}
+\subsection{Performance}
 
 \section{Runge-Kutta}
-
-\subsection{Performance}
 \subsection{Accuracy}
+\subsection{Performance}
 
 \section{Comparison with CPU implementations}
 \section{Comparison with GPU implementations}
