--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -11,7 +11,7 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper,12pt,times,numbered,print,index]{Classes/PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,times,numbered,print,index,chapter]{Classes/PhDThesisPSnPDF}
 
 % ******************************************************************************
 % ******************************* Class Options ********************************
@@ -109,7 +109,7 @@
 % Useful option to review a particular chapter or to send it to supervisior.
 % To use choose `chapter' option in the document class
 \ifdefineChapter
-	\includeonly{P1-Introduction/introduction}
+	\includeonly{P1-Introduction/introduction,P2-Main/methods,P2-Main/results}
 \fi
 
 % ******************************** Front Matter ********************************
@@ -179,10 +179,10 @@
 \begin{appendices} % Using appendices environment for more functunality
 
 \include{Appendix/haskell_ode_source}
-\include{Appendix/toolchain_integration}
-\include{Appendix/toolchain_deployment}
+\include{Appendix/project_structure}
 \include{Appendix/data_io}
 \include{Appendix/data_io_setup}
+\include{Appendix/toolchain_integration}
 
 \end{appendices}
 
