--- a/thesis/Appendix/data_io.tex
+++ b/thesis/Appendix/data_io.tex
@@ -2,3 +2,4 @@
 \label{app:data_io}
 Setting up the data IO to the FPGA
 
+\lstinputlisting[language=C++, caption=CEEEE PLUS PLUS]{../control/main.cpp}
