--- a/thesis/Appendix/project_structure.tex
+++ b/thesis/Appendix/project_structure.tex
@@ -1,3 +1,3 @@
 \chapter{Project structure}
 \label{app:project_structure}
-Setting up the data IO to the FPGA
+Description of the project structure, what is where, reference to github etc.
