--- a/thesis/Appendix/toolchain_integration.tex
+++ b/thesis/Appendix/toolchain_integration.tex
@@ -1,3 +1,6 @@
 \chapter{Toolchain integration}
 \label{app:toolchain_integration}
 
+Description of the automation script
+
+\lstinputlisting[language=bash, caption=SHELL SCRIPT!]{../run.sh}
