--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -11,7 +11,7 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper,12pt,times,numbered,print,index,chapter]{Classes/PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,times,numbered,print,index]{Classes/PhDThesisPSnPDF}
 
 % ******************************************************************************
 % ******************************* Class Options ********************************
@@ -181,7 +181,6 @@
 \include{Appendix/haskell_ode_source}
 \include{Appendix/project_structure}
 \include{Appendix/data_io}
-\include{Appendix/data_io_setup}
 \include{Appendix/toolchain_integration}
 
 \end{appendices}
