almost done updating results

--- a/thesis/Intro/preamble.tex
+++ b/thesis/Intro/preamble.tex
@@ -155,6 +155,8 @@
 \newcommand{\code}[1]{\lstinline{#1}}
 \newcommand{\sep}{\hspace{50pt}}
 \newcommand{\clash}{C$\lambda$aSH}
+\newcommand{\matlab}{MATLAB} %\textsuperscript{\textregistered}
+\providecommand{\e}[1]{\ensuremath{\times 10^{#1}}}
 
 \newenvironment{itemizens}
 { 
