--- a/thesis/References/references.bib
+++ b/thesis/References/references.bib
@@ -78,6 +78,12 @@
 	year = {2015}, 
 	note = "[Accessed: June 2015]"
 }
+@misc{MatlabFloat,
+	title = {MathWorks: Floating-Point Numbers},
+	howpublished = "\url{http://nl.mathworks.com/help/matlab/matlab_prog/floating-point-numbers.html}",
+	year = {2015}, 
+	note = "[Accessed: June 2015]"
+}
 
 
 % ------------------------------------------------------------------------
