--- a/thesis/Intro/acknowledgement.tex
+++ b/thesis/Intro/acknowledgement.tex
@@ -19,8 +19,8 @@
 	ASIC & Application-specific integrated circuit \\
 	FPGA & Field-Programmable Gate Array \\
 	CPU & Central Processing Unit \\
-	GPU & Graphics Processing Unit \\
-	GPGPU & General Purpose GPU \\
+	%GPU & Graphics Processing Unit \\
+	%GPGPU & General Purpose GPU \\
 	DSP & Digital Signal Processing \\
 	LED & Light Emitting Diode \\
 	VHDL & VHSIC HDL \\
