--- a/thesis/References/references.bib
+++ b/thesis/References/references.bib
@@ -84,7 +84,12 @@
 	year = {2015}, 
 	note = "[Accessed: June 2015]"
 }
-
+@misc{AlteraFPGAs,
+	title = {Altera  >  Products  >  FPGAs  > Overview},
+	howpublished = "\url{https://www.altera.com/products/fpga/overview.html}",
+	year = {2015}, 
+	note = "[Accessed: June 2015]"
+}
 
 % ------------------------------------------------------------------------
 % SAMPLE BIBLIOGRAPHY FILE
