--- a/thesis/thesis-info.tex
+++ b/thesis/thesis-info.tex
@@ -6,7 +6,7 @@
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
-\subtitle{Comparison to conventional solution methods}
+%\subtitle{Comparison to conventional solution methods}
 
 %% The full name of the author
 \author{Martijn Bakker}
